--- a/index.html
+++ b/index.html
@@ -24,10 +24,13 @@
     ></script>
   </head>
   <body>
-    <div class="d-flex bg-warning">
-      <h1>Hello World</h1>
-      <p>Hi there</p>
-      <i class="fab fa-instagram"></i>
+    <div class="hero">
+      <p>👋Hello, I am</p>
+      <h1>Motahare Shokri</h1>
+      <h2 class="mb-5">Front-end developer based in Iran</h2>
+      <div>
+        <a href="#" class="btn btn-branding">contact me</a>
+      </div>
     </div>
   </body>
 </html>
