--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
           </div>
         </div>
         <div class="col-lg-6">
-          <img src="images/patricia.png" class="img-fluid" alt="" />
+          <img src="images/motahareshokri.jpeg" class="img-fluid" alt="" />
         </div>
       </div>
     </div>
