--- a/about.html
+++ b/about.html
@@ -24,10 +24,10 @@
     ></script>
   </head>
   <body>
-    <div class="about-section container">
+    <div class="content-container container">
       <div class="row">
-        <div class="col-md-6">
-          <div class="about-section-content">
+        <div class="col-lg-6">
+          <div class="content">
             <h1 class="mb-4">Hi I am Motahare Shokri</h1>
             <h2 class="mb-4">Frontend Developer, based in IRAN.</h2>
             <p class="mb-5">
@@ -40,7 +40,7 @@
           </div>
         </div>
         <div class="col-lg-6">
-          <img src="images/motahareshokri.jpeg" class="img-fluid" alt="" />
+          <img src="images/motahareshokri.jpeg" alt="" class="img-fluid" />
         </div>
       </div>
     </div>
