--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
   </head>
   <body>
     <div class="hero">
-      <p>👋Hello, I am</p>
+      <p>👋 Hello, I am</p>
       <h1>Motahare Shokri</h1>
       <h2 class="mb-5">Front-end developer based in Iran</h2>
       <div>
-        <a href="#" class="btn btn-branding">contact me</a>
+        <a href="#" class="btn btn-branding">Contact me</a>
       </div>
     </div>
     <p class="text-center m-5">
@@ -41,7 +41,7 @@
           <img src="images/yogurt.png" class="img-fluid" alt="" />
         </div>
         <div class="col">
-          <div class="project-description">
+          <div class="project-desciption">
             <h2 class="mb-5">Yogurt Project</h2>
             <p class="mb-5 text-muted">
               Far far away, behind the word mountains, far from the countries
@@ -49,14 +49,13 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a href="#" class="btn btn-branding-outline">Learn more</a>
+            <a href="" class="btn btn-branding-outline"> Learn more </a>
           </div>
         </div>
       </div>
-
       <div class="row mb-5">
         <div class="col">
-          <div class="project-description">
+          <div class="project-desciption">
             <h2 class="mb-5">Weather App</h2>
             <p class="mb-5 text-muted">
               Far far away, behind the word mountains, far from the countries
@@ -64,20 +63,19 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a href="#" class="btn btn-branding-outline">Learn more</a>
+            <a href="" class="btn btn-branding-outline"> Learn more </a>
           </div>
         </div>
         <div class="col d-none d-lg-block">
           <img src="images/weather.png" class="img-fluid" alt="" />
         </div>
       </div>
-
       <div class="row">
         <div class="col d-none d-lg-block">
           <img src="images/dictionary.png" class="img-fluid" alt="" />
         </div>
         <div class="col">
-          <div class="project-description">
+          <div class="project-desciption">
             <h2 class="mb-5">Dictionary App</h2>
             <p class="mb-5 text-muted">
               Far far away, behind the word mountains, far from the countries
@@ -85,7 +83,7 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a href="#" class="btn btn-branding-outline">Learn more</a>
+            <a href="" class="btn btn-branding-outline"> Learn more </a>
           </div>
         </div>
       </div>
