--- a/contact.html
+++ b/contact.html
@@ -29,18 +29,20 @@
         <h1 class="mb-5">Let's get in touch!</h1>
         <h3>Email</h3>
         <p>
-          <a href="mailto:patricia@gmail.com"> patricia@gmail.com </a>
+          <a href="mailto:motahare.shokri99@gmail.com">
+            motahare.shokri99@gmail.com
+          </a>
         </p>
         <h3>Twitter</h3>
         <p>
-          <a href="https://www.twitter.com/patricia" target="_blank">
-            @patricia
+          <a href="https://www.twitter.com/motishokri" target="_blank">
+            @motishokri
           </a>
         </p>
         <h3>Instagram</h3>
         <p>
-          <a href="https://www.instagram.com/patricia.codes" target="_blank">
-            @patricia.codes
+          <a href="https://www.instagram.com/motishokri" target="_blank">
+            @motishokri
           </a>
         </p>
       </div>
