--- a/work.html
+++ b/work.html
@@ -30,6 +30,36 @@
     ></script>
   </head>
   <body>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <a href="/" title="Homepage">
+          <img
+            src="images/logo.png"
+            class="logo d-none d-md-block"
+            alt="Motahare Logo"
+          />
+          <img
+            src="images/logo-small.jpg"
+            class="logo d-block d-md-none"
+            alt="Motahare Logo"
+          />
+        </a>
+        <ul>
+          <li>
+            <a href="index.html" title="Homepage"> Home</a>
+          </li>
+          <li>
+            <a href="about.html" title="About Patricia"> About</a>
+          </li>
+          <li class="active">
+            <a href="work.html" title="Patricia's work"> Work</a>
+          </li>
+          <li>
+            <a href="contact.html" title="Contact Patricia"> Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
     <div class="content-container container">
       <div class="content">
         <h1 class="mb-5">Take a look at what I've been working on!</h1>
@@ -39,46 +69,106 @@
             <img
               src="images/yogurt.png"
               class="img-fluid mb-3 rounded"
-              alt=""
+              alt="Yogurt project preview"
             />
-            <h3 class="text-center m-0">Yogurt Project</h3>
-            <p class="text-center text-muted">Built with HTML and CSS</p>
+            <h3 class="text-center m-0">Yogurt Landing Page</h3>
+            <p class="text-center text-muted">
+              Built with HTML, CSS, and JavaScript
+            </p>
           </div>
           <div class="col-md-6 mb-4">
             <img
               src="images/weather.png"
               class="img-fluid mb-3 rounded"
-              alt=""
+              alt="Weather project preview"
             />
-            <h3 class="text-center m-0">Weather Project</h3>
+            <h3 class="text-center m-0">Weather App</h3>
             <p class="text-center text-muted">
-              Built with HTML, CSS and JavaScript
+              Built using HTML, an active API, and advanced CSS and JavaScript
             </p>
           </div>
           <div class="col-md-6 mb-4">
             <img
               src="images/dictionary.png"
               class="img-fluid mb-3 rounded"
-              alt=""
+              alt="Disctionary project preview"
             />
             <h3 class="text-center m-0">Dictionary App</h3>
             <p class="text-center text-muted">
-              Built with HTML, CSS with React
+              Built using HTML, an active API, advanced CSS, and React
             </p>
           </div>
           <div class="col-md-6 mb-4">
             <img
               src="images/translation.png"
               class="img-fluid mb-3 rounded"
-              alt=""
+              alt="Translation project preview"
             />
             <h3 class="text-center m-0">Translation App</h3>
             <p class="text-center text-muted">
-              Built with HTML, CSS with React
+              Built using HTML, an active API, advanced CSS, and React
             </p>
           </div>
         </div>
       </div>
     </div>
+    <footer class="container">
+      <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
+        <div>
+          <h3>Work Inquiry</h3>
+          <p class="text-muted">Let's work together</p>
+        </div>
+        <div>
+          <a
+            href="contact.html"
+            class="btn btn-branding mt-3"
+            title="Contact Motahare"
+          >
+            Contact me
+          </a>
+        </div>
+      </div>
+      <div class="d-flex justify-content-center mb-5">
+        <a
+          href="mailto:motahare.shokri99@gmail.com"
+          class="email-link"
+          title="Email Patricia"
+        >
+          motahare.shokri99@gmail.com
+        </a>
+      </div>
+      <div class="social-links d-flex justify-content-center">
+        <a
+          href="https://www.github.com/motishokri"
+          target="_blank"
+          title="GitHub Profile"
+        >
+          <i class="fab fa-github"></i>
+        </a>
+        <a
+          href="https://www.instragram.com/motishokri"
+          target="_blank"
+          title="instragram Profile"
+        >
+          <i class="fab fa-instagram"></i>
+        </a>
+        <a
+          href="https://www.twitter.com/motishokri"
+          target="_blank"
+          title="Twitter Profile"
+        >
+          <i class="fab fa-twitter"></i>
+        </a>
+      </div>
+      <p class="text-center mt-5">
+        ✌️ This website was coded by Motahare Shokri, and is
+        <a
+          href="https://github.com/motishokri/portfolio-project"
+          target="_blank"
+        >
+          open-sourced
+        </a>
+      </p>
+    </footer>
   </body>
 </html>
