--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@
               I’m open to work remotely and have flexible hours. I’m highly
               skilled in JavaScript and React.
             </p>
-            <a href="/work.html" class="btn btn-branding">See my projects</a>
+            <a href="work.html" class="btn btn-branding">See my projects</a>
           </div>
         </div>
         <div class="col-lg-6">
