--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
-        <a href="/" title="Homepage">
+        <a href="index.html" title="Homepage">
           <img
             src="images/logo.png"
             class="logo d-none d-md-block"
@@ -87,7 +87,7 @@
         </div>
         <div>
           <a
-            href="/contact.html"
+            href="contact.html"
             class="btn btn-branding mt-3"
             title="Contact Motahare"
           >
