--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
-        <a href="/" title="Homepage">
+        <a href="index.html" title="Homepage">
           <img
             src="images/logo.png"
             class="logo d-none d-md-block"
@@ -56,7 +56,7 @@
             <a href="about.html" title="About Motahare"> About</a>
           </li>
           <li>
-            <a href="work.html" title="Patricia's Motahare"> Work</a>
+            <a href="work.html" title="Motahare's work"> Work</a>
           </li>
           <li class="active">
             <a href="contact.html" title="Contact Motahare"> Contact</a>
@@ -67,24 +67,58 @@
     <div class="content-container container">
       <div class="content">
         <h1 class="mb-5">Let's get in touch!</h1>
-        <h3>Email</h3>
-        <p>
-          <a href="mailto:motahare.shokri99@gmail.com">
-            motahare.shokri99@gmail.com
-          </a>
-        </p>
-        <h3>Twitter</h3>
-        <p>
-          <a href="https://www.twitter.com/motishokri" target="_blank">
-            @motishokri
-          </a>
-        </p>
-        <h3>Instagram</h3>
-        <p>
-          <a href="https://www.instagram.com/motishokri" target="_blank">
-            @motishokri
-          </a>
-        </p>
+        <div class="row">
+          <div class="col-md-8">
+            <form
+              action="https://formspree.io/f/mwkalajy"
+              method="POST"
+              class="border p-3 rounded mb-3"
+            >
+              <div class="mb-3">
+                <label class="form-label"> Your email: </label>
+                <input
+                  type="email"
+                  name="_replyto"
+                  class="form-control"
+                  required
+                  autofocus
+                />
+              </div>
+              <div class="mb-3">
+                <label class="form-label"> Your message: </label>
+                <textarea
+                  name="message"
+                  class="form-control"
+                  required
+                ></textarea>
+              </div>
+
+              <!-- your other form fields go here -->
+
+              <button type="submit" class="btn btn-branding">Send</button>
+            </form>
+          </div>
+          <div class="col-md-4">
+            <h3>Email</h3>
+            <p>
+              <a href="mailto:motahare.shokri99@gmail.com">
+                motahare.shokri99@gmail.com
+              </a>
+            </p>
+            <h3>Twitter</h3>
+            <p>
+              <a href="https://www.twitter.com/motishokri" target="_blank">
+                @motishokri
+              </a>
+            </p>
+            <h3>Instagram</h3>
+            <p>
+              <a href="https://www.instagram.com/motishokri" target="_blank">
+                @motishokri
+              </a>
+            </p>
+          </div>
+        </div>
       </div>
     </div>
     <footer class="container">
