--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
-        <a href="/" title="Homepage">
+        <a href="" title="Homepage">
           <img
             src="images/logo.png"
             class="logo d-none d-md-block"
