--- a/work.html
+++ b/work.html
@@ -32,7 +32,7 @@
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
-        <a href="/" title="Homepage">
+        <a href="index.html" title="Homepage">
           <img
             src="images/logo.png"
             class="logo d-none d-md-block"
@@ -49,13 +49,13 @@
             <a href="index.html" title="Homepage"> Home</a>
           </li>
           <li>
-            <a href="about.html" title="About Patricia"> About</a>
+            <a href="about.html" title="About Motahare"> About</a>
           </li>
           <li class="active">
-            <a href="work.html" title="Patricia's work"> Work</a>
+            <a href="work.html" title="Motahare's work"> Work</a>
           </li>
           <li>
-            <a href="contact.html" title="Contact Patricia"> Contact</a>
+            <a href="contact.html" title="Contact Motahare"> Contact</a>
           </li>
         </ul>
       </nav>
@@ -75,6 +75,14 @@
             <p class="text-center text-muted">
               Built with HTML, CSS, and JavaScript
             </p>
+            <div class="text-center mt-4 mb-5">
+              <a
+                href="https://www.yogurt.shecodes.io/"
+                class="btn-branding"
+                target="_blank"
+                >Launch Project</a
+              >
+            </div>
           </div>
           <div class="col-md-6 mb-4">
             <img
@@ -86,6 +94,14 @@
             <p class="text-center text-muted">
               Built using HTML, an active API, and advanced CSS and JavaScript
             </p>
+            <div class="text-center mt-4 mb-5">
+              <a
+                href="https://www.weather.shecodes.io/"
+                class="btn-branding"
+                target="_blank"
+                >Launch Project</a
+              >
+            </div>
           </div>
           <div class="col-md-6 mb-4">
             <img
@@ -97,6 +113,14 @@
             <p class="text-center text-muted">
               Built using HTML, an active API, advanced CSS, and React
             </p>
+            <div class="text-center mt-4 mb-5">
+              <a
+                href="https://www.dictionary.shecodes.io/"
+                class="btn-branding"
+                target="_blank"
+                >Launch Project</a
+              >
+            </div>
           </div>
           <div class="col-md-6 mb-4">
             <img
@@ -108,6 +132,15 @@
             <p class="text-center text-muted">
               Built using HTML, an active API, advanced CSS, and React
             </p>
+            <div class="text-center mt-4 mb-5">
+              <a
+                href="https://www.shecodes.io/"
+                class="btn-branding-outline"
+                target="_blank"
+                disabled
+                >Coming soon</a
+              >
+            </div>
           </div>
         </div>
       </div>
@@ -132,7 +165,7 @@
         <a
           href="mailto:motahare.shokri99@gmail.com"
           class="email-link"
-          title="Email Patricia"
+          title="Email Motahare"
         >
           motahare.shokri99@gmail.com
         </a>
