--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
           </div>
         </div>
         <div class="col-lg-6">
-          <img src="images/motahareshokri.jpeg" alt="" class="img-fluid" />
+          <img src="images/motahareshokrii.jpeg" alt="" class="img-fluid" />
         </div>
       </div>
     </div>
