--- a/work.html
+++ b/work.html
@@ -77,7 +77,7 @@
             </p>
             <div class="text-center mt-4 mb-5">
               <a
-                href="https://www.yogurt.shecodes.io/"
+                href="https://s3.amazonaws.com/shecodesio-production/challenge_submissions/files/000/588/225/original/Final_Project.html?1637559312"
                 class="btn-branding"
                 target="_blank"
                 >Launch Project</a
@@ -96,7 +96,7 @@
             </p>
             <div class="text-center mt-4 mb-5">
               <a
-                href="https://www.weather.shecodes.io/"
+                href="https://heuristic-galileo-35ebf8.netlify.app/"
                 class="btn-branding"
                 target="_blank"
                 >Launch Project</a
@@ -115,7 +115,7 @@
             </p>
             <div class="text-center mt-4 mb-5">
               <a
-                href="https://www.dictionary.shecodes.io/"
+                href="https://willowy-moxie-57b719.netlify.app/"
                 class="btn-branding"
                 target="_blank"
                 >Launch Project</a
