update index and work.html

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
               advanced 8-week JavaScript coding workshop. Building upon my
               previously-gained knowledge, I also became skilled in Bootstrap,
               API’s, real-life development workflow, hosting, and advanced
-              JavaScript. I combined all of these skills to create a
+              JavaScript and React. I combined all of these skills to create a
               fully-functioning weather app.
             </p>
             <a href="work.html" class="btn btn-branding-outline">
