--- a/work.html
+++ b/work.html
@@ -92,11 +92,12 @@
             />
             <h3 class="text-center m-0">Weather App</h3>
             <p class="text-center text-muted">
-              Built using HTML, an active API, and advanced CSS and JavaScript
+              Built using HTML, an active API, and advanced CSS, JavaScript and
+              React
             </p>
             <div class="text-center mt-4 mb-5">
               <a
-                href="https://heuristic-galileo-35ebf8.netlify.app/"
+                href="https://creative-sherbet-789682.netlify.app/"
                 class="btn-branding"
                 target="_blank"
                 >Launch Project</a
